--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@nrwl/angular": "^15.6.3",
     "@popperjs/core": "^2.11.6",
+    "chart.js": "^4.2.1",
     "crypto-js": "^4.1.1",
+    "d3": "^7.8.2",
+    "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "nanoid": "^4.0.1",
+    "ng2-charts": "^4.1.1",
     "ngrx-store-freeze": "^0.2.4",
     "ngx-cookie": "^6.0.1",
+    "ngx-daterangepicker-material": "^6.0.4",
     "ngx-permissions": "^14.0.0",
     "primeicons": "^6.0.1",
     "primeng": "^15.2.0",
@@ -50,6 +55,7 @@
     "@nrwl/linter": "15.6.3",
     "@nrwl/workspace": "15.6.3",
     "@types/crypto-js": "^4.1.1",
+    "@types/d3": "^7.4.0",
     "@types/jest": "28.1.1",
     "@types/lodash": "^4.14.191",
     "@types/lodash-es": "^4.17.6",
