--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "factoryplus",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "yarn nx run web:serve"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~15.1.0",
